# incandescent-bot

./: .pre-commit-config.yaml  .tool-versions  CHANGELOG.md  README.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  launcher.py  manage.py  pyproject.toml  setup.cfg
.github/workflows/: deploy.yml  publish.yml
bot/: core.py
bot/extensions/: economy.py  errors.py  events.py  fun.py  jishaku.py  levels.py  support.py
bot/utils/: constants.py  context.py  database.py  embed.py  extensions.py  formats.py
config/: .env.example
docker/: Dockerfile  entrypoint.sh
migrations/: env.py
migrations/versions/: 3627fa04dcf8_set_the_nullable_field_to_false_by_.py  57ec8d1ee415_create_levels_table.py  8b004acf7e90_create_economy_table.py  cec1ef5dab8b_create_messages_table.py
